CHANGE HISTORY 	Shoutcast2017
--------------	Releases: 	https://github.com/rols1/Shoutcast2017/releases	
--------------	Forum:		https://forums.plex.tv/discussion/296423/rel-shoutcast2017


27.02.2018	0.3.1	accidently inserted line 31 (picture-link from forum) removed.
26.02.2018	0.3.0	Radionomy: Dict[openerID]replaced with global var openerStore[openerID] (Dict caused
			errors triggered by pickle.py, copy_reg.py (TypeError: can't pickle lock objects).
not on github	0.2.9	Radionomy: Modul keepalive added (required for Browsing) in ../Contents/Libraries/Shared.	
not on github	0.2.8	ValidatePrefs added - activated in Start, MainMenu and 	MainMenuRadionomy.
22.02.2018	0.2.7	Radionomy addon: integration in Favourite-functions.
not on github	0.2.6	Radionomy addon: genres and subgenres added.
not on github	0.2.5	getStreamMeta: Filter for suspended stations added.	
not on github	0.2.4	Radionomy addon: Search function added
not on github	0.2.3	DefaultPrefs.json: Preferences for Radionomy addon (use, country).
			MainMenuRadionomy added.
not on github	0.2.2	StationCheck: Playlist check 'http' instead of 'http' (compat. for Radionomy).
			Icons for Radionomy addon.
19.02.2018	0.2.1	StationCheck (decoding song title): missing function "unescape" added.
			StationCheck: Error message as summary-line added if stream was not found.
			StationCheck: "None" in summary-line replaced with "song title not found".	
09.01.2018	0.2.0	MainMenu: suppress log-output of None-typ of Dict['Favourites'].
26.11.2017	0.1.9	StationCheck: Erkennung/Behandlung von Shoutcast-Streams ohne Portnummer, ohne Pfad
			(Methode aus TUNEIN2017).	
not on github	0.1.8	MainMenu: Log Favourites ersetzt durch Anzahl.
25.11.2017	0.1.7	Favourite-Option (local, without folder): Preferences and functions adjusted.
24.11.2017	0.1.6	StationCheck: Verwendung bitrate + song in summary. Korrektur title.
			StationCheck: Abfangen nicht ladbarer bzw. leerer Playlisten. 